kubernetes/apps/default/additional-routes/app/dns-ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dns-server
spec:
  hostnames: ["dns.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: dns-server
          port: 5380
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dns-server-analogpuddle
spec:
  hostnames: ["dns.analogpuddle.com"]
  parentRefs:
    - name: envoy-internal-ap
      namespace: network
  rules:
    - backendRefs:
        - name: dns-server
          port: 5380
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dns-server
subsets:
  - addresses:
      - ip: 192.168.1.10
    ports:
      - name: https
        port: 5380
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dns-server
spec:
  ports:
    - name: https
      port: 5380
  type: ClusterIP
